# raetro_library_sdlite

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  configure.ac  raetro.m4  sdl.m4  sdl.pc.in
build-scripts/: makedep.sh
include/: SDL.h  SDL_active.h  SDL_assert.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_config.h  SDL_config.h.in  SDL_config_minimal.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_getenv.h  SDL_haptic.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_name.h  SDL_opengl.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_revision.h  SDL_rwops.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h  (+2 more)
src/: SDL.c  SDL_assert.c  SDL_assert_c.h  SDL_error.c  SDL_error_c.h  SDL_fatal.c  SDL_fatal.h  SDL_log.c
src/audio/: SDL_audio.c  SDL_audio_c.h  SDL_audiocvt.c  SDL_audiodev.c  SDL_audiodev_c.h  SDL_audiomem.h  SDL_mixer.c  SDL_mixer_arm.c  SDL_mixer_arm.h  SDL_sysaudio.h  SDL_wave.c  SDL_wave.h
src/audio/alsa/: SDL_alsa_audio.c  SDL_alsa_audio.h
src/audio/dummy/: SDL_dummyaudio.c  SDL_dummyaudio.h
src/audio/oss/: SDL_dmaaudio.c  SDL_dmaaudio.h  SDL_dspaudio.c  SDL_dspaudio.h
src/audio/pulse/: SDL_pulseaudio.c  SDL_pulseaudio.h
src/cdrom/: SDL_cdrom.c  SDL_syscdrom.h
src/cdrom/dummy/: SDL_syscdrom.c
src/cdrom/linux/: SDL_syscdrom.c
src/core/linux/: SDL_udev.c  SDL_udev.h
src/core/unix/: SDL_poll.c  SDL_poll.h
src/cpuinfo/: SDL_cpuinfo.c
src/events/: SDL_active.c  SDL_events.c  SDL_events_c.h  SDL_expose.c  SDL_keyboard.c  SDL_mouse.c  SDL_quit.c  SDL_resize.c  SDL_sysevents.h
src/file/: SDL_rwops.c
src/filesystem/dummy/: SDL_sysfilesystem.c
src/filesystem/unix/: SDL_sysfilesystem.c
src/haptic/: SDL_haptic.c  SDL_haptic_c.h  SDL_syshaptic.h
src/haptic/dummy/: SDL_syshaptic.c
src/haptic/linux/: SDL_syshaptic.c
src/joystick/: SDL_joystick.c  SDL_joystick_c.h  SDL_sysjoystick.h
src/joystick/dummy/: SDL_sysjoystick.c
src/joystick/linux/: SDL_sysjoystick.c  SDL_sysjoystick_c.h
src/libm/: e_atan2.c  e_exp.c  e_fmod.c  e_log.c  e_log.h  e_log10.c  e_pow.c  e_pow.h  e_rem_pio2.c  e_sqrt.c  e_sqrt.h  k_cos.c  k_rem_pio2.c  k_sin.c  k_tan.c  math_libm.h  math_private.h  s_atan.c  s_copysign.c  s_cos.c  s_fabs.c  s_floor.c  s_scalbn.c  s_sin.c  s_tan.c
src/loadso/dlopen/: SDL_sysloadso.c
src/loadso/dummy/: SDL_sysloadso.c
src/main/dummy/: SDL_dummy_main.c
src/power/: SDL_power.c  SDL_syspower.h
src/power/linux/: SDL_syspower.c
src/stdlib/: SDL_getenv.c  SDL_iconv.c  SDL_malloc.c  SDL_qsort.c  SDL_stdlib.c  SDL_string.c
src/thread/: SDL_systhread.h  SDL_thread.c  SDL_thread_c.h
src/thread/generic/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_syssem.c  SDL_systhread.c
src/thread/pth/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_systhread.c
src/thread/pthread/: SDL_syscond.c  SDL_sysmutex.c  SDL_sysmutex_c.h  SDL_syssem.c  SDL_systhread.c
src/timer/: SDL_systimer.h  SDL_timer.c  SDL_timer_c.h
src/timer/dummy/: SDL_systimer.c
src/timer/unix/: SDL_systimer.c
src/video/: SDL_RLEaccel.c  SDL_RLEaccel_c.h  SDL_blit.c  SDL_blit.h  SDL_blit_0.c  SDL_blit_1.c  SDL_blit_A.c  SDL_blit_N.c  SDL_bmp.c  SDL_cursor.c  SDL_cursor_c.h  SDL_gamma.c  SDL_glfuncs.h  SDL_leaks.h  SDL_pixels.c  SDL_pixels_c.h  SDL_stretch.c  SDL_stretch_c.h  SDL_surface.c  SDL_sysvideo.h  SDL_video.c  SDL_yuv.c  SDL_yuv_sw.c  SDL_yuv_sw_c.h  SDL_yuvfuncs.h  blank_cursor.h  default_cursor.h
src/video/arm/: boogermann-pixman-arm64-neon.S  notaz-arm-neon-asm.S  pixman-arm-neon-asm.S  pixman-arm-simd-asm.h  pixman-arma64-neon-asm.S  pixman-arma64-neon-asm.h
src/video/dummy/: SDL_nullevents.c  SDL_nullevents_c.h  SDL_nullmouse.c  SDL_nullmouse_c.h  SDL_nullvideo.c  SDL_nullvideo.h
src/video/fbcon/: SDL_fbevents.c  SDL_fbevents_c.h  SDL_fbkeys.h  SDL_fbmouse.c  SDL_fbmouse_c.h  SDL_fbvideo.c  SDL_fbvideo.h  SDL_osmesa.c  SDL_osmesa.h
src/video/kmsdrm/: SDL_kmsdrmcolordef.c  SDL_kmsdrmcolordef.h  SDL_kmsdrmevents.c  SDL_kmsdrmevents_c.h  SDL_kmsdrmmisc.c  SDL_kmsdrmmisc_c.h  SDL_kmsdrmvideo.c  SDL_kmsdrmvideo.h
test/: Makefile.in  checkkeys.c  common.c  common.h  configure.in  graywin.c  loopwave.c  testalpha.c  testaudioinfo.c  testbitmap.c  testblitspeed.c  testcdrom.c  testcursor.c  testdraw2.c  testdyngl.c  testdyngles.c  testerror.c  testfile.c  testfilesystem.c  testgamma.c  testgl.c  testgl2.c  testgles.c  testhaptic.c  testhread.c  testiconv.c  testintersections.c  testjoystick.c  testkeys.c  testloadso.c  testlock.c  testmmousetablet.c  testmultiaudio.c  testoverlay.c  testoverlay2.c  testpalette.c  testplatform.c  testpower.c  testresample.c  testsem.c  (+8 more)
test/test/: SDL_test_assert.c  SDL_test_common.c  SDL_test_compare.c  SDL_test_crc32.c  SDL_test_font.c  SDL_test_fuzzer.c  SDL_test_harness.c  SDL_test_imageBlit.c  SDL_test_imageBlitBlend.c  SDL_test_imageFace.c  SDL_test_imagePrimitives.c  SDL_test_imagePrimitivesBlend.c  SDL_test_log.c  SDL_test_md5.c  SDL_test_memory.c  SDL_test_random.c
